# Whisper-Page

./: .gitignore  Aurevix-A16Z-Canva-Style.html  DECISIONS.md  README.md  TECHNICAL_DEBT.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/adr/: 001-tauri-over-electron.md  002-tiptap-codemirror-hybrid.md
docs/strategy/: researcher-e-analysis.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_commands.rs  mod.rs  pdf_commands.rs  window_commands.rs
src/components/Editor/: EditorContainer.tsx  SourceEditor.tsx  WysiwygEditor.tsx
src/components/Modal/: ExportModal.tsx  TableInsertModal.tsx
src/components/Sidebar/: Sidebar.tsx
src/components/StatusBar/: StatusBar.tsx
src/hooks/: useFileOperations.ts  useKeyboardShortcuts.ts  useTheme.ts
src/services/: markdownService.ts  tauriService.ts
src/store/: editorStore.ts  fileStore.ts  themeStore.ts
src/utils/: cn.ts
src/workers/: markdownWorker.ts
tests/: setup.ts
tests/e2e/: editor.spec.ts
tests/integration/: fileOperations.test.ts
tests/unit/: EditorContainer.test.tsx  cn.test.ts  editorStore.test.ts  fileStore.test.ts  markdownService.test.ts  tauriService.test.ts  tauriServiceCoverage.test.ts  themeStore.test.ts  useFileOperations.test.ts  useFileOperationsCoverage.test.ts
(+8 files in other folders)
